public/mobile.css
/* ... */
#bottom-nav .icon-button img {
    filter: invert(48%) sepia(0%) saturate(1024%) hue-rotate(225deg) brightness(93%) contrast(89%);
}

#bottom-nav .selected {
    color: black;
}

#bottom-nav .selected img {
    filter: invert(0%) sepia(1%) saturate(7498%) hue-rotate(44deg) brightness(82%) contrast(99%) !important;
}

/* PAGE */

#pages-container {
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: row;
    overflow-x: hidden;
}

.page {
    position: fixed;
    top: 0;
    height: 100vh;
    width: 100vw;
    padding: 60px 10px 80px 10px;
    background-color: #FFFFFF;
    overflow-y: scroll;
}

.page.inFromRight {
    -webkit-animation: 150ms forwards ease-in pageInFromRight;
    animation: 150ms forwards ease-in pageInFromRight;
    z-index: 1;
}

.page.inFromLeft {
    -webkit-animation: 150ms forwards ease-in pageInFromLeft;
    animation: 150ms forwards ease-in pageInFromLeft;
    z-index: 1;
}

.page-content {
    margin: 20px auto;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.content-header {
    height: 50px;
    font-size: 28px;
    font-weight: bold;
}

.accordion-button {
    position: fixed;
    z-index: 20;
    bottom: min(20vh, 80px);
    right: 20px;
    height: 60px;
    width: 60px;
    border: none;
    border-radius: 50%;
    box-shadow: 0 1px 5px #737373;
    background-color: #5271FF;
    display: flex;
    justify-content: center;
    align-items: center;
}

.accordion-button img {
    height: 55%;
    filter: invert(100%) sepia(89%) saturate(281%) hue-rotate(273deg) brightness(116%) contrast(109%);
}

#home-page .page-content {
    height: 35vh;
    max-height: 300px;
}

/* #home-page .page-container {
    height: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    gap: 20px;
} */

#home-page .content-body {
    height: 100%;
    width: 100%;
    padding: 10px 0;
    overflow-x: auto;
    display: -webkit-inline-box;
    gap: 10px;
    scroll-snap-type: x mandatory;
}

.post {
    position: relative;
    height: 100%;
    width: 80vw;
    max-width: 350px;
    background-color: #FFFFFF;
    border: solid 2px #D9D9D9;
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 15px 10px;
    scroll-snap-align: start;
}

.post-header {
    position: relative;
    height: 40px;
    width: 100%;
    margin-bottom: 15px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.post-header-text {
    position: relative;
    min-width: 100%;
}

.post-user {
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}

.post-header .icon-button {
    margin-left: auto;
    height: 50%;
}

.post .display-image {
    height: 100%;
    margin-right: 15px;
}

.post-date {
    position: relative;
    font-size: 12px;
}

.post-body {
    position: relative;
    height: 60%;
    width: 100%;
    font-size: 13px;
    display: -webkit-box;
    -webkit-line-clamp: var(--post-line-clamp);
    -webkit-box-orient: vertical;  
    overflow: hidden;
    text-align: left;
    word-wrap: break-word;
    white-space: pre-wrap;
}

.post::after {
    content: '';
    position: absolute;
    bottom: 10px;
    left: 50%;
    transform: translateX(-50%);
    background-color: #FFFFFF;
    height: var(--hide-line-height);
    min-width: 95%;
}

#member-page .content-header button {
    height: 100%;
    border: none;
    background: transparent;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
    font-size: inherit;
    font-weight: inherit;
}

#member-page .content-header img {
    height: 70%;
    aspect-ratio: 1/1;
}

/* ACCORDION */

#accordion {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 30;
    width: 100vw;
    height: 100vh;
    background-color: #FFFFFF;
}

#accordion.show {
    -webkit-animation: 200ms forwards accordionIn;
    animation: 200ms forwards accordionIn;
}

#accordion.unshow {
    -webkit-animation: 200ms forwards reverse accordionIn;
    animation: 200ms forwards reverse accordionIn;
}

#accordion-header {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 31;
    width: 100vw;
    height: 60px;
    border-bottom: solid 1px #A6A6A6;
    box-shadow: 0 1px 5px #737373;
    background-color: #FFFFFF;
    padding: 0 10px;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    gap: 20px;
}

#accordion-header .icon-button:first-child {
    position: absolute;
    left: 10px;
    top: 0;
    bottom: 0;
    margin: auto 0;
}

#accordion-header .icon-button {
    height: 40%;
}

#accordion-header button img {
    height: 100%;
    filter: invert(48%) sepia(0%) saturate(1024%) hue-rotate(225deg) brightness(93%) contrast(89%);
}

#accordion-body {
    position: absolute;
    top: 0;
    width: 100vw;
    height: 100vh;
    padding: 80px 20px 40px 20px;
    overflow-y: auto;
}

#accordion-members-container {
    margin: 10px auto 0 auto;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 5px;
}

#accordion-body #display-image-container {
    margin: 0 auto 10px auto;
    height: 175px;
}

.textarea.input {
    height: fit-content;
}

#accordion-body .input {
    width: 100%;
    overflow: hidden;
}

#accordion-content-header {
    margin: 0 auto 20px auto;
    height: 70px;
    width: 100%;
    border-bottom: solid 1px #A6A6A6;
    padding: 10px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

#accordion-content-header .icon-button {
    margin-right: 20px;
}

#accordion-content-body {
    width: 100%;
    text-align: left;
    word-wrap: break-word;
    white-space: pre-wrap;
}

.remove-member-button {
    position: absolute;
    right: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
}
/* ... */

